[metadata]
name = pytorch_feature_analysis
version = 0.0.1
license = MIT
description = Python library for performing representational similarity analyis and related analyses on convolutional neural networks; wrapper over PyTorch functions. 
long_description = file: README.rst
author = JohnMark Taylor 
author_email = johnmarkedwardtaylor@gmail.com 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src
